@@ -25,6 +25,7 @@ clap_complete = "4.5.47"
 clap_complete_nushell = "4.5.5"
 faster-hex = { version = "0.10.0", default-features = false, features = ["std"], optional = true }
 getrandom = "0.3.2"
+indicatif = "0.17.11"
 rand_chacha = "0.9.0"
 rand_core = { version = "0.9.3", features = ["os_rng", "std"] }
 rand_hc = { version = "0.4.0", optional = true }
